# matasano-crypto-challenges

./: Cargo.toml  LICENSE  README.adoc
src/: lib.rs
src/set1/: challenge3.rs  challenge4.rs  challenge6.rs  challenge7.rs  challenge8.rs  challenges.rs  hamming_distance_prototpye.rb  mod.rs
src/set2/: challenge10.rs  challenge11.rs  challenge14.rs  challenge16.rs  mod.rs
src/set3/: challenge17.rs  challenge18.rs  mod.rs
